# everest-ui

./: .gitignore  CMakeLists.txt  LICENSE-MIT  NOTICE  README.md
backend/: CMakeLists.txt
backend/api/: CMakeLists.txt  ProtocolSchema.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestResponseTypes.hpp  RpcApiClient.cpp  RpcApiClient.hpp  SystemControlHandler.cpp  SystemControlHandler.hpp  server.cpp  server.hpp
backend/api/config/: backend.conf
backend/api/libs/: BackendConfig.cpp  BackendConfig.hpp  ConsoleConnector.cpp  ConsoleConnector.hpp  EverestServiceControl.cpp  EverestServiceControl.hpp  ResponseBuilder.cpp  ResponseBuilder.hpp  SystemdService.cpp  SystemdService.hpp  YamlUtils.cpp  YamlUtils.hpp
backend/api/modules/: EverestConfig.cpp  EverestConfig.hpp  FirmwareUpdate.cpp  FirmwareUpdate.hpp  Logs.cpp  Logs.hpp  OCPPConfig.cpp  OCPPConfig.hpp  PCAP.cpp  PCAP.hpp  SafetyController.cpp  SafetyController.hpp
backend/launcher/: CMakeLists.txt
backend/launcher/src/: main.cpp
backend/webserver/: CMakeLists.txt  main.cpp
backend/webserver/config/: ServerConfig.cpp  ServerConfig.hpp  frontend.conf  frontend.conf.in
backend/webserver/http/: RequestParsing.cpp  RequestParsing.hpp  StaticContent.cpp  StaticContent.hpp  StaticResponse.cpp  StaticResponse.hpp  StaticServer.cpp  StaticServer.hpp
backend/webserver/ws/: WebSocketProxySession.cpp  WebSocketProxySession.hpp
public/: index.html
public/config/: parameter_catalog.json
public/css/: app.css  pages.css
public/js/: app.js  state.js  transport.js
public/js/config/: pageConfigAdapter.js  pageConfigValidation.js
public/js/pages/: errorLogs.js  everest.js  firmware.js  ocpp.js  pcap.js  safety.js
public/js/protocol/: constants.js  requestBuilder.js  responseMapper.js  strings.js
public/js/ui/: filesDownload.js  layout.js  pageLifecycle.js  settingsMatrix.js  settingsTable.js  sideBar.js  systemLog.js  topBar.js
